--- a/templates/main/grades.html
+++ b/templates/main/grades.html
@@ -34,7 +34,7 @@
       </div>
       <ul class="ul">
         <li>
-          <a href="#">
+          <a href="{{url_for('dashboard')}}">
             <svg
               width="20"
               height="25"
