--- a/templates/main/courses.html
+++ b/templates/main/courses.html
@@ -31,7 +31,7 @@
       </div>
       <ul class="ul">
         <li>
-          <a href="#">
+          <a href="{{url_for('dashboard')}}">
             <svg
               width="20"
               height="25"
